[#60343] Add font files and init setup

--- a/src/os2datascanner/projects/static/scss/master.scss
+++ b/src/os2datascanner/projects/static/scss/master.scss
@@ -4,6 +4,7 @@
 @import 'layout';
 @import '../fonts/inter/inter.css';
 @import '../fonts/materialicons/materialicons.css';
+@import '../fonts/materialsymbols/materialsymbols.css';
 @import 'typography';
 
 @import 'ie-support';
