--- a/src/os2datascanner/projects/static/scss/_base.scss
+++ b/src/os2datascanner/projects/static/scss/_base.scss
@@ -30,6 +30,9 @@ img {
   text-align: left !important;
 }
 
+// Note: This stays until all former material-icons have either been refactored 
+// to material-symbols or there's been made a conscious decision not to.
+// Redmine case: #60342
 .material-icons {
   font-family: 'Material Icons';
   font-weight: normal;
@@ -50,7 +53,26 @@ img {
 
   /* Support for Firefox. */
   -moz-osx-font-smoothing: grayscale;
+}
 
-  /* Support for IE. */
-  font-feature-settings: 'liga';
+.material-symbols {
+  font-family: 'Material Symbols';
+  font-weight: normal;
+  font-style: normal;
+  font-size: 24px;  /* Preferred icon size */
+  display: inline-block;
+  line-height: 1;
+  text-transform: none;
+  letter-spacing: normal;
+  word-wrap: normal;
+  white-space: nowrap;
+  direction: ltr;
+
+  /* Support for all WebKit browsers. */
+  -webkit-font-smoothing: antialiased;
+  /* Support for Safari and Chrome. */
+  text-rendering: optimizeLegibility;
+
+  /* Support for Firefox. */
+  -moz-osx-font-smoothing: grayscale;
 }
