[#60343] Add new icons to check the library works

--- a/src/os2datascanner/projects/admin/organizations/templates/organizations/org_table.html
+++ b/src/os2datascanner/projects/admin/organizations/templates/organizations/org_table.html
@@ -59,12 +59,12 @@
                 <td class="column column--info">
                   <div class="info__container">
                     <div class="info info--email">
-                      <span class="material-icons">mail</span>
+                      <i id="mail" class="material-symbols">mail</i>
                       <span class="info__label">{{ organization.contact_email|default_if_none:"---" }}</span>
                     </div>
  
                     <div class="info info--phone">
-                      <span class="material-icons">phone</span>
+                      <i id="phone" class="material-symbols">phone</i>
                       <span class="info__label">{{ organization.contact_phone|default_if_none:"---" }}</span>
                     </div>
                   </div>
