[#60288] Refactor all scanner job datatables

--- a/src/os2datascanner/projects/admin/adminapp/templates/components/common/base.html
+++ b/src/os2datascanner/projects/admin/adminapp/templates/components/common/base.html
@@ -79,6 +79,8 @@
       <!-- TODO: Do 'scripts' and 'jquery_script' need to be separate blocks? -->
       {% block jquery_script %}{% endblock %}
 
+      {% include "components/common/scripts.html" %}
+
     </body>
   </html>
 {% endlanguage %}
