--- a/src/os2datascanner/projects/admin/organizations/templates/organizations/orgunit_list.html
+++ b/src/os2datascanner/projects/admin/organizations/templates/organizations/orgunit_list.html
@@ -217,7 +217,7 @@
                   {% endfor %}
                 {% else %}
                   <tr>
-                    <td class="no_units" colspan="4">{% trans "No organizational units found ..." %}</td>
+                    <td class="nothing_found_row" colspan="4">{% trans "No organizational units found ..." %}</td>
                   </tr>
                 {% endif %}
               </tbody>
