--- a/src/os2datascanner/projects/report/reportapp/templates/components/statistics/employee_template.html
+++ b/src/os2datascanner/projects/report/reportapp/templates/components/statistics/employee_template.html
@@ -17,7 +17,7 @@
     {% endif %}
   </td>
   <td class="datatable__column--matchstatus">
-    <div class="status_wrapper" data-status="{{ employee.match_status }}">{{ employee.status }}</div>
+    <div class="status tag" data-status="{{ employee.match_status }}">{{ employee.status }}</div>
   </td>
   <td class="datatable__column--leader-actions">
     <div class="action-wrapper">
