[#60288] Add review edits

--- a/src/os2datascanner/projects/admin/adminapp/templates/scanners.html
+++ b/src/os2datascanner/projects/admin/adminapp/templates/scanners.html
@@ -55,7 +55,7 @@
       </div>
 
       {% if scanner_list %}
-        <div class="datatablex__card-container">
+        <div class="datatablex__card-container search-target">
           <div class="datatablex__wrapper">
             <table class="datatablex scannerjob-table{% if view.type == 'web' %} scannerjob-table--webscanner{% elif view.type == 'file' %} scannerjob-table--filescanner{% endif %}">
               <thead>
