[#54367] Radio buttons to switch between authentication methods

--- a/src/os2datascanner/projects/admin/adminapp/templates/components/scanner/scanner_form.html
+++ b/src/os2datascanner/projects/admin/adminapp/templates/components/scanner/scanner_form.html
@@ -193,6 +193,66 @@
                 {% include "components/scanner/scanner_form_input_field.html" with field=form.token placeholder="(Uændret)" password="True" required="True" %}
               {% endif %}
 
+              {% if view.type == "exchange" %}
+
+                <label for="use-grant">{% trans "use grant for access authentication"|capfirst %}</label>
+ 
+                {% comment %}
+                We need to check object.grant rather than object.authentication
+                here because Scanners /always/ have an Authentication object
+                (see issue #45918)
+                {% endcomment %}
+
+                <input type="radio"
+                       name="cred-method"
+                       value="use-grant"
+                       onclick="hideExchangeCreds();"
+                       id="use-grant"
+                       {% if object.grant %}checked{% endif %} />
+ 
+                <label for="use-credentials">{% trans "use service account for access authentication"|capfirst %}</label>
+ 
+                <input type="radio"
+                       name="cred-method"
+                       value="use-credentials"
+                       onclick="hideExchangeGrant();"
+                       id="use-credentials"
+                       {% if not object.grant %}checked{% endif %} />
+
+                <script>
+                  function getElements() {
+                    const grant = document.getElementById("id_grant");
+                    const credsUsername = document.getElementById("id_username");
+                    const credsPassword = document.getElementById("id_password");
+                    return {"grant": grant, "credsUsername": credsUsername, "credsPassword": credsPassword}
+                  }
+
+                  function hideExchangeGrant() {
+                    let {grant, credsUsername, credsPassword, grantCheck, credsCheck} = getElements();
+                    grant.setAttribute("disabled", true);
+                    credsUsername.removeAttribute("disabled");
+                    credsPassword.removeAttribute("disabled");
+                  }
+
+                  function hideExchangeCreds() {
+                    let {grant, credsUsername, credsPassword, grantCheck, credsCheck} = getElements();
+                    grant.removeAttribute("disabled");
+                    credsUsername.setAttribute("disabled", true);
+                    credsPassword.setAttribute("disabled", true);
+                  }
+
+                  document.addEventListener("DOMContentLoaded", () => {
+                    if (document.getElementById("use-grant").checked) {
+                      hideExchangeCreds();
+                    } else if (document.getElementById("use-credentials").checked) {
+                      hideExchangeGrant();
+                    }
+                  })
+                  
+                </script>
+
+              {% endif %}
+
               {% if form.grant %}
                 {% include "components/scanner/scanner_form_select_option_field.html" with field=form.grant %}
               {% endif %}
