--- a/src/os2datascanner/projects/static/scss/components/_modal.scss
+++ b/src/os2datascanner/projects/static/scss/components/_modal.scss
@@ -62,6 +62,11 @@
     }
   }
 
+  .select2-selection__rendered {
+    height: 8rem !important;
+    overflow-y: scroll !important;
+  }
+
   .cleanup-content {
     margin: 0 1rem;
 
