--- a/src/os2datascanner/projects/report/reportapp/templates/components/user/outlook_category_settings.html
+++ b/src/os2datascanner/projects/report/reportapp/templates/components/user/outlook_category_settings.html
@@ -21,30 +21,24 @@
           <label for="{{ outlook_settings_form.categorize_email.id_for_label }}"></label>
         </td>
       </tr>
-      <tr>
-        <td>{% trans "Match category name" %}</td>
-        <td class="form__group">{{ match_category_form.match_category_name }}</td>
-      </tr>
-      <tr>
+      <tr class="hide-on-uncheck"
+          {% if not categorize_check %}hidden{% endif %}>
         <td>{% trans "Match category colour" %}</td>
-        <td class="dropdown">{{ match_category_form.match_category_colour }}</td>
+        <td class="dropdown">{{ outlook_settings_form.match_category_colour }}</td>
       </tr>
-      <tr>
-        <td>{% trans "False positive category name" %}</td>
-        <td class="form__group">{{ false_positive_category_form.false_positive_category_name }}</td>
-      </tr>
-      <tr>
+      <tr class="hide-on-uncheck"
+          {% if not categorize_check %}hidden{% endif %}>
         <td>{% trans "False positive category colour" %}</td>
-        <td class="dropdown">{{ false_positive_category_form.false_positive_category_colour }}</td>
+        <td class="dropdown">{{ outlook_settings_form.false_positive_category_colour }}</td>
       </tr>
     </form>
-    <tr>
+    <tr class="hide-on-uncheck"
+        {% if not categorize_check %}hidden{% endif %}>
       <td>{% trans "Categorize all existing" %}</td>
       <td>
         <button class="button"
           name="categorize_existing"
           title="{% trans "Categorizes your emails based on your existing results. Be aware that scannerjob runs will also do this for you, if you've enabled categorizing." %}"
-          {% if not tenant_id_retrievable %}disabled{% endif %}
           hx-post="{% url 'outlook-category-settings' %}"
           hx-headers='{"X-CSRFToken": "{{ csrf_token }}"}'
           hx-swap="none"
@@ -58,3 +52,18 @@
     </tr>
   </tbody>
 </table>
+
+<script>
+  htmx.onLoad(() => {
+    const checkbox = document.getElementById("id_categorize_email");
+    checkbox.addEventListener("change", () => {
+      const elements = document.getElementsByClassName("hide-on-uncheck");
+      for (let e of elements) {
+        if (checkbox.checked) {
+          e.removeAttribute("hidden");
+        } else {
+          e.setAttribute("hidden", true);
+        }
+      }})
+    })
+</script>
